# Function-Merging

./: .gitignore  IP.md  README.md  build-llvm.sh  compile-spec2017.sh  compile_spec2017.sh  config_build_pass.sh  myexpcfg.cfg  run.sh
algos/: run.sh
algos/pldi20ae/: compile_time.sh
algos/samples/: branch2.ll  bzip2.ll  goto.cpp  loop.ll  main.bl.ll  test.cpp
algos/src/: CMakeLists.txt
algos/src/include/llvm/ADT/: ArrayView.h  SADiagonalWindows.h  SAHirschberg.h  SANeedlemanWunsch.h  SequenceAlignment.h
algos/src/include/llvm/Transforms/IPO/: ILP_FM.h  LCS_FM.h  SALSSA_FM.h
algos/src/lib/: CMakeLists (archived).txt  CMakeLists.txt
algos/src/lib/Transforms/IPO/: FMLoader.cpp  FMObjFileSize.hpp  ILP_FM.cpp  LCS_FM.cpp  MergeSimilarFunctions.cpp  SALSSA_FM.cpp
bench/: config.sh  myplots.py  plot-code-size.py  plot-compilation-time.py  results.py  run-all.sh  run-code-size.sh  run-compilation-time.sh
bench/results/spec2006/n1/: compilation.csv  results.csv
bench/results/spec2006/n5/: compilation.csv  results.csv
bench/scripts/: -O0_bin_size.txt  -O3_bin_size.txt  compile_IR.sh  compile_IR_then_link.sh  compile_opt_link.sh  spec2017script.sh
bench/scripts-sepc2017/: -O1_bin_size.txt  build.sh  compile_with_legacy_pass.sh  link_IR.sh  runsetup.sh
bench/spec2006/: Experiment.config  Makefile.default  compilation.csv  results.csv  run-code-size.sh
bench/spec2006/400.perlbench/src/: Base64.bc  Cwd.bc  Dumper.bc  DynaLoader.bc  HiRes.bc  Hostname.bc  IO.bc  MD5.bc  Opcode.bc  Parser.bc  Peek.bc  Storable.bc  attrs.bc  av.bc  deb.bc  doio.bc  doop.bc  dump.bc  globals.bc  gv.bc  hv.bc  locale.bc  mg.bc  numeric.bc  op.bc  pad.bc  perl.bc  perlapi.bc  perlio.bc  perlmain.bc  perly.bc  poll.bc  pp.bc  pp_ctl.bc  pp_hot.bc  pp_pack.bc  pp_sort.bc  pp_sys.bc  regcomp.bc  regexec.bc  (+11 more)
bench/spec2006/401.bzip2/src/: blocksort.bc  bzip2.bc  bzlib.bc  (+6 more)
bench/spec2006/log/: 400.perlbench.fm3.txt  401.bzip2.fm3.txt  403.gcc.fm3.txt  429.mcf.fm3.txt  433.milc.fm3.txt  444.namd.fm3.txt  445.gobmk.fm3.txt  447.dealII.fm3.txt  450.soplex.fm3.txt  453.povray.fm3.txt  456.hmmer.fm3.txt  458.sjeng.fm3.txt  462.libquantum.fm3.txt  464.h264ref.fm3.txt  470.lbm.fm3.txt  471.omnetpp.fm3.txt  473.astar.fm3.txt  482.sphinx3.fm3.txt  483.xalancbmk.fm3.txt
function-merging-branch-reord/: CMakeLists.txt  FunctionMergingBranchReord.cpp
results/linked_20251201_171557/: 508.namd_r.out
results/linked_20251201_171955/: 505.mcf_r2.ll
results/linked_20251201_172044/: 505.mcf_r2.out
results/linked_20251201_172647/: 505.mcf_r.out
results/linked_20251201_172910/: 500.perlbench_r.out  511.povray_r.out  511.povray_r1.out  519.lbm_r.out  519.lbm_r1.ll  519.lbm_r1.out  520.omnetpp_r.out  525.x264_r.out  525.x264_r2.ll  525.x264_r2.out
salssa-function-merging (currently does exactly as SalSSA; just rename things)/: FunctionMergingBranchReord.cpp
samples/: branch.cpp  branch.ll  branch2.cpp  goto.ll  input_for_hello.ll  loop.cpp  swap_merge.cpp  swap_merge.ll  switch.cpp  switch.ll  test.ll  test2.cpp  test2.ll
(+1591 files in other folders)
